After commit f4e15893e5be6da6c7642bb7ef9b14d5531afe41 (Bug 22516 - Ensure inotify fd is set close on exec) the code in bus/dir-watch-inotify.c is as follows: #ifdef HAVE_INOTIFY_INIT1 inotify_fd = inotify_init1 (IN_CLOEXEC); #else inotify_fd = inotify_init (); #endif if (inotify_fd <= 0) { _dbus_warn ("Cannot initialize inotify\n"); goto out; } This does break when compiling with a recent userspace and then using an older kernel. The fix from https://bugzilla.gnome.org/show_bug.cgi?id=593775 (same bug in glib) can also be used here.
Created attachment 30484 [details] [review] 0001-Bug-23957-Support-inotify-on-older-kernels.patch
Looks good to me!
This one got lost, but I just rebased it to dbus-1.2 and pushed there.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.